[metadata]
name = godot-api-refs
version = 0.1.1
author = Douglas Webster
author_email = douglas.webster2107@gmail.com
description = Create links for Godot class names to Godot api help files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = godot, gdscript, documentation, restructured, sphinx
url = https://github.com/DouglasWebster/godot-api-refs
project_urls =
    Bug Tracker = https://github.com/DouglasWebster/godot-api-refs/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = ghapi

[options.packages.find]
where = src